--- a/null/extent.html
+++ b/null/extent.html
@@ -50,7 +50,7 @@ ExtentReports 2.0
 <i class='mdi-hardware-desktop-windows'></i>
 </li>
 <li>
-<span class='suite-started-time'>2021-05-01 12:25:57</span>
+<span class='suite-started-time'>2021-05-01 13:17:07</span>
 </li>
 <li>
 <span>v2.40.2</span>
@@ -80,13 +80,13 @@ ExtentReports 2.0
 <div class='col l2 m4 s12'>
 <div class='card suite-total-time-current'> 
 <span class='panel-name'>Total Time Taken (Current Run)</span> 
-<span class='suite-total-time-current-value panel-lead'>0h 1m 33s+92ms</span> 
+<span class='suite-total-time-current-value panel-lead'>0h 52m 43s+80ms</span> 
 </div> 
 </div>
 <div class='col l2 m4 s12'>
 <div class='card suite-total-time-overall'> 
 <span class='panel-name'>Total Time Taken (Overall)</span> 
-<span class='suite-total-time-overall-value panel-lead'>0h 0m 0s+748ms</span> 
+<span class='suite-total-time-overall-value panel-lead'>0h 0m 1s+170ms</span> 
 </div> 
 </div>
 <div class='col l2 m4 s6 suite-start-time'>
@@ -98,7 +98,7 @@ ExtentReports 2.0
 <div class='col l2 m4 s6 suite-end-time'>
 <div class='card accent pink-accent'> 
 <span class='panel-name'>End</span> 
-<span class='panel-lead suite-ended-time'>2021-05-01 12:25:57</span> 
+<span class='panel-lead suite-ended-time'>2021-05-01 13:17:07</span> 
 </div> 
 </div>
 </div>
@@ -226,7 +226,7 @@ ExtentReports 2.0
 <div class='card-panel no-padding-h no-padding-v no-margin-v'>
 <div class='wrapper'>
 <ul id='test-collection' class='test-collection'>
-<li class='collection-item test displayed active pass ' extentid='be0e6782-5360-4b1a-b628-8705b1040439'>
+<li class='collection-item test displayed active pass ' extentid='19716836-24c1-46d0-9933-1baa2b6f5bb1'>
 <div class='test-head'>
 <span class='test-name'>Test 01 </span>
 <span class='test-status label right outline capitalize pass'>pass</span>
@@ -268,7 +268,7 @@ ExtentReports 2.0
 </div>
 </div>
 </li>
-<li class='collection-item test displayed active pass ' extentid='defae610-6000-42d4-bcdf-b58fc05ebbbd'>
+<li class='collection-item test displayed active pass ' extentid='3f1bdcef-4df7-48ce-a693-8edb0fc48e3e'>
 <div class='test-head'>
 <span class='test-name'>Test 01 </span>
 <span class='test-status label right outline capitalize pass'>pass</span>
@@ -278,7 +278,7 @@ ExtentReports 2.0
 <div class='test-info'>
 <span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-05-01 12:25:56</span>
 <span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-05-01 12:25:56</span>
-<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+29ms</span>
+<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+0ms</span>
 </div>
 <div class='test-desc'></div>
 <div class='test-attributes'>
@@ -301,6 +301,48 @@ ExtentReports 2.0
 <tr>
 <td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
 <td class='timestamp'>12:25:56</td>
+<td class='step-details'>Validate that signup is appearing</td>
+</tr>
+</tbody>
+</table>
+<ul class='collapsible node-list' data-collapsible='accordion'>
+</ul>
+</div>
+</div>
+</li>
+<li class='collection-item test displayed active pass ' extentid='5e78bd88-c973-4bdb-b14c-2ed0c386baaf'>
+<div class='test-head'>
+<span class='test-name'>Test 01 </span>
+<span class='test-status label right outline capitalize pass'>pass</span>
+<span class='category-assigned hide '></span>
+</div>
+<div class='test-body'>
+<div class='test-info'>
+<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-05-01 13:17:06</span>
+<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-05-01 13:17:06</span>
+<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+27ms</span>
+</div>
+<div class='test-desc'></div>
+<div class='test-attributes'>
+</div>
+<div class='test-steps'>
+<table class='bordered table-results'>
+<thead>
+<tr>
+<th>Status</th>
+<th>Timestamp</th>
+<th>Details</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+<td class='timestamp'>13:17:06</td>
+<td class='step-details'>SignUp Button is clicked on</td>
+</tr>
+<tr>
+<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+<td class='timestamp'>13:17:06</td>
 <td class='step-details'>Validate that signup is appearing</td>
 </tr>
 </tbody>
